tests/baselines/reference/selfReferencingFile2.errors.txt
selfReferencingFile2.ts(1,21): error TS6053: File '../selfReferencingFile2.ts' not found.


==== selfReferencingFile2.ts (1 errors) ====
    ///<reference path='../selfReferencingFile2.ts'/>
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File '../selfReferencingFile2.ts' not found.
    
    class selfReferencingFile2 {
    
    }